Make sure that all pieces are completely visible in matching-angles-and-shapes

--- a/lessons/matching-angles-and-shapes/lesson.css
+++ b/lessons/matching-angles-and-shapes/lesson.css
@@ -1,6 +1,6 @@
-#section {	
-    margin: 2em auto;
-    width: 840px;			
+#section {
+    margin: -5px auto;
+    width: 840px;
 }
 
 .default {
